# plugin_ai_chat

./: .gitignore  CLAUDE.md  Cargo.toml  EULA.md  README.md  build.rs  config.example.yaml
.github/workflows/: build.yml  publish.yml
defaults/: core_rules.prompt  crisis_ai_detect.prompt  crisis_mild.prompt  crisis_severe.prompt  daily_plan.prompt  emotion_analyze.prompt  history_attention.prompt  learn_style.prompt  luo9_chat.prompt  luo9_timing_gate.prompt  memory_extract.prompt  memory_review.prompt  memory_summarize.prompt  mental_state_generate.prompt  monthly_plan.prompt  planner.prompt  post_analyze.prompt  proactive_message.prompt  reply_effect_judge.prompt  replyer.prompt  review_conversation.prompt  self_reflect.prompt  sticker_content_filtration.prompt  sticker_select.prompt  timing_gate.prompt  topic_classify.prompt  vision_describe.prompt  weekly_plan.prompt
docs/: anti_injection.md  architecture.md  behavioral_systems.md  configuration.md  crisis_protocol.md  prompts.md
frontend/: build-rs.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
prompts/: default.txt  love.txt
src/: admin.rs  admin_ui.rs  ai.rs  anti_injection.rs  archive.rs  blocklist.rs  circadian.rs  config.rs  cron.rs  crypto.rs  emotion.rs  lib.rs  memory.rs  mental_state.rs  personality.rs  proactive.rs  quota.rs  schedule.rs  self_memory.rs  sender.rs  social_battery.rs  state.rs  tracking.rs  util.rs  vision.rs  working_memory.rs
src/activity/: mod.rs
src/admin/: backup.rs  handlers.rs  mod.rs  ui.rs
src/ai/: mod.rs  provider.rs  tools.rs  types.rs
src/anti_injection/: behavior.rs  context.rs  decision.rs  mod.rs  normalize.rs  patterns.rs  sandbox.rs  scorer.rs  semantic.rs  structure.rs  unicode.rs
src/config/: access.rs  init.rs  mod.rs  structs.rs
src/conversation/: attention.rs  batch.rs  context.rs  handler.rs  mod.rs
src/conversation_end/: mod.rs
src/crisis/: mod.rs
src/cron/: mod.rs
src/crypto/: mod.rs
src/emoji/: mod.rs
src/emoji_system/: manager.rs  mod.rs  store.rs
src/emotion/: context.rs  detect.rs  mod.rs  state.rs
src/learner/: extract.rs  mod.rs  store.rs
src/memory/: cognitive_biases.rs  embedding.rs  extract.rs  graph.rs  mod.rs  operations.rs  ops_log.rs  review.rs  sqlite.rs  store.rs  unpredictability.rs  vector_store.rs
src/mental_state/: concerns.rs  defects.rs  deliberations.rs  mod.rs
src/narrative_self/: mod.rs
src/person_info/: mod.rs  relationship.rs  store.rs
src/personality/: mod.rs  store.rs  templates.rs
src/planner/: mod.rs  tools.rs  types.rs
src/proactive/: generate.rs  mod.rs  motivation.rs  runtime.rs  trigger.rs
src/prompt/: manager.rs  mod.rs  renderer.rs
src/quota/: interest.rs  mod.rs  (+2 more)
test/: debug.html
(+73 files in other folders)
