[package]
name = "plugin_ai_chat"
version = "4.0.4-beta.1"
edition = "2024"
description = "AI 对话插件"
authors = ["luoy-oss"]

[package.metadata]
tags = ["ai", "chat"]

[features]
default = ["plugin"]
plugin = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
luo9_sdk = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ureq = "3.3"
once_cell = "1"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
rand_core = "0.6.4"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["local-offset", "macros"] }
tiny_http = "0.12"
dashmap = "6"
regex = "1"
unicode-normalization = "0.1"
aho-corasick = "1"
unicode-security = "0.1"
smallvec = "1"

[dev-dependencies]
proptest = "1"
